--- a/style.css
+++ b/style.css
@@ -3,9 +3,15 @@ body {
 }
 
 .header {
-
+color: #f9faf8;
+font-size: 24px;
 }
 
+.header,
+.hero,
+.footer {
+    background-color: #1f2937;
+}
 .menu {
 
 }
@@ -14,8 +20,10 @@ body {
 
 }
 
-.awesome {
-
+.awesome div {
+font-weight: extra-bold;
+color: #f9faf8;
+font-size: 48px;
 }
 
 .sign-up {
@@ -59,5 +67,5 @@ body {
 }
 
 .footer {
-    
+
 }
