--- a/style.css
+++ b/style.css
@@ -20,13 +20,14 @@ font-size: 24px;
 
 }
 
-.awesome div {
+.awesome h1 {
 font-weight: extra-bold;
 color: #f9faf8;
 font-size: 48px;
 }
 
 .sign-up {
+background-color: #3882f6;
 
 }
 
