--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-
+font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
@@ -12,6 +12,19 @@ font-size: 24px;
 .footer {
     background-color: #1f2937;
 }
+
+.menu,
+.awesome p {
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
 .menu {
 
 }
