--- a/style.css
+++ b/style.css
@@ -40,15 +40,21 @@ font-size: 48px;
 
 .sign-up {
 background-color: #3882f6;
-
+color: #f9faf8;
 }
 
 .img-placeholder {
-
+background-color: #6f6f6f;
+color: #e5e7eb;
 }
 
 .random {
+color: #1f2937;
+}
 
+.random h2 {
+    font-weight: extra-bold;
+    font-size: 36px;
 }
 
 .images {
@@ -60,7 +66,10 @@ background-color: #3882f6;
 }
 
 .blue-box {
-
+border: 2px solid #3882f6;
+border-radius: 25px;
+height: 150px;
+width: 150px;
 }
 
 .subtext {
