--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-font-family: Arial, Helvetica, sans-serif;
+font-family: Helvetica, sans-serif;
 }
 
 .header {
@@ -97,9 +97,15 @@ color: #f9faf8;
 }
 
 .cta-text {
-font-weight: bold;
 
 }
+
+.cta-text div {
+    font-weight: 100;
+    font-size: .9em;
+}
+
+
 
 .footer {
 
