--- a/style.css
+++ b/style.css
@@ -8,11 +8,15 @@ margin: 0;
 .header {
 color: #f9faf8;
 font-size: 24px;
+display: flex;
+justify-content: space-between;
+padding: 10px 0px;
 }
 
 .top,
 .footer {
     background-color: #1f2937;
+    padding: 0px 42px;
 }
 
 .menu,
