--- a/style.css
+++ b/style.css
@@ -29,6 +29,15 @@ ul {
     list-style: none;
     padding: 0;
     margin: 0;
+    display: flex;
+    gap: 18px;
+}
+
+a {
+    text-decoration: none;
+    color: #e5e7eb;
+    font-weight: 100;
+    font-size: .9em;
 }
 
 .menu {
@@ -36,7 +45,7 @@ ul {
 }
 
 .hero {
-
+display: flex;
 }
 
 .awesome h1 {
