--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ color: #f9faf8;
 font-size: 24px;
 display: flex;
 justify-content: space-between;
-padding: 10px 0px;
+padding: 10px 0px 42px 0;
 }
 
 .top,
@@ -23,6 +23,8 @@ padding: 10px 0px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    width: 450px;
+    height: 200px;
 }
 
 p {
@@ -72,7 +74,7 @@ color: #f9faf8;
 background-color: #6f6f6f;
 color: #e5e7eb;
 width: 450px;
-height: 200px;
+height: 150px;
 display: flex;
 justify-content: center;
 align-items: center;
