Add to style.css

--- a/style.css
+++ b/style.css
@@ -13,24 +13,28 @@ justify-content: space-between;
 padding: 10px 0px 42px 0;
 }
 
+.top {
+    padding: 0 100px 100px 100px;
+}
+
 .top,
 .footer {
     background-color: #1f2937;
-    padding: 0px 100px;
 }
 
 .awesome {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    width: 450px;
-    height: 200px;
+    align-items: flex-start;
+    align-content: flex-start;
 }
 
 p {
     color: #e5e7eb;
     font-size: 18px;
     font-weight: 100;
+    margin: 0;
+    padding-bottom: 6px;
 }
 
 ul {
@@ -55,10 +59,11 @@ a {
 .hero {
 display: flex;
 justify-content: space-between;
+gap: 42px;
 }
 
-h1 {
-font-weight: extra-bold;
+.awe-title {
+font-weight: 900;
 color: #f9faf8;
 font-size: 48px;
 padding: 0;
@@ -68,6 +73,8 @@ margin: 0;
 .sign-up {
 background-color: #3882f6;
 color: #f9faf8;
+padding: 6px 18px;
+border-radius: 5px;
 }
 
 .img-placeholder {
