--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-font-family: Helvetica, sans-serif;
+font-family: Roboto, sans-serif;
 display: flex;
 flex-direction: column;
 margin: 0;
@@ -27,6 +27,7 @@ padding: 10px 0px 42px 0;
     flex-direction: column;
     align-items: flex-start;
     align-content: flex-start;
+    flex: 1;
 }
 
 p {
@@ -81,10 +82,11 @@ border-radius: 5px;
 background-color: #6f6f6f;
 color: #e5e7eb;
 width: 450px;
-height: 150px;
+height: auto;
 display: flex;
 justify-content: center;
 align-items: center;
+flex: 1;
 }
 
 .random {
