--- a/style.css
+++ b/style.css
@@ -93,6 +93,10 @@ flex: 1;
 
 .random {
 color: #1f2937;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
 }
 
 .random h2 {
@@ -101,16 +105,21 @@ color: #1f2937;
 }
 
 .images {
-
+display: flex;
+flex-direction: row;
+justify-content: center;
+gap: 25px;
 }
 
 .info {
-
+display: flex;
+flex-direction: column;
+align-items: center;
 }
 
 .blue-box {
-border: 2px solid #3882f6;
-border-radius: 25px;
+border: 3px solid #3882f6;
+border-radius: 15px;
 height: 150px;
 width: 150px;
 }
