--- a/style.css
+++ b/style.css
@@ -108,13 +108,13 @@ padding: 0 100px 60px 100px;
 .images {
 display: flex;
 flex-direction: row;
-justify-content: center;
+gap: 30px;
 }
 
 .info {
 display: flex;
 flex-direction: column;
-align-items: center;
+gap: 10px;
 }
 
 .blue-box {
@@ -127,7 +127,9 @@ width: 150px;
 .subtext {
 color: #6f6f6f;
 font-size: .9em;
-align-self: center;
+width: 150px;
+height: auto;
+text-align: center;
 }
 
 .quote {
